@@ -1,3 +1,10 @@
+2009-04-19  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/powerpc64/aix.m4 (EXTERN_FUNC): New define.  Add dummy variants
+	for other m4 files.
+	* mpn/powerpc64/mode64/divrem_1.asm: Use EXTERN_FUNC.
+	* mpn/powerpc64/mode64/divrem_1.asm: Likewise.
+
 2009-04-16  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/x86_64-defs.m4 (JUMPTABSECT): New define.
